Google tag manager added

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "otp-timer": "^1.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-i18next": "^12.1.4",
     "react-icons": "^4.7.1",
     "react-minimal-pie-chart": "^8.4.0",
@@ -40,6 +41,7 @@
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-gtm-module": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "autoprefixer": "^10.4.13",
